Added a basic changelog

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -1,15 +1,16 @@
-# Changelog
-
 ## `[4.0.0]`: Unreleased
 
 The 4.0 series represents the first major update to the Macrostrat frontend in
 three years. It is the first major version of the Macrostrat web interface that
 is an incremental update, i.e., it is an evolution of the v3 codebase rather
-than a complete rewrite. The 4.0 milestone does not change much functionality,
-but it strives to simplify the codebase, make it more modular, align with modern
-best practices, and better enable collaborative development. Future iterations
-in the 4.0 series will add functionality such as stratigraphic columns,
-paleogeography, a digital globe, geochemical data holdings, and more.
+than a complete rewrite. The 4.0 milestone does not add much user-facing
+functionality, but it simplifies, modularizes, and modernizes the codebase to
+better enable collaborative and iterative development.
+
+Based on this initial release, we will be able to shift to a higher cadence of
+releases. Future iterations in the 4.0 series will add functionality such as
+stratigraphic columns, paleogeography, a digital globe, geochemical data
+holdings, and more.
 
 ### User-facing changes
 
