Simplified components substantially

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -1,14 +1,13 @@
 ## `[4.0.0]`: Unreleased
 
-The 4.0 series represents the first major update to the Macrostrat frontend in
-three years. It is the first major version of the Macrostrat web interface that
+The 4.0 series represents the first major update to the Macrostrat web interface
+since 2018. It is the first major version of the Macrostrat user interface that
 is an incremental update, i.e., it is an evolution of the v3 codebase rather
-than a complete rewrite. The 4.0 milestone does not add much user-facing
-functionality, but it simplifies, modularizes, and modernizes the codebase to
-better enable collaborative and iterative development.
+than a complete rewrite. The 4.0 milestone simplifies, modernizes, and
+modularizes the codebase to allow more collaborative development and a higher
+release cadence.
 
-Based on this initial release, we will be able to shift to a higher cadence of
-releases. Future iterations in the 4.0 series will add functionality such as
+Future iterations in the 4.0 series will add functionality such as
 stratigraphic columns, paleogeography, a digital globe, geochemical data
 holdings, and more.
 
@@ -21,7 +20,7 @@ holdings, and more.
 
 ### Internal changes
 
-- Convert codebase to Typescript
+- Convert codebase to Typescript from Javascript
 - Start converting JSX to hyperscript
 - Update React code to use functional components and hooks
 - Improve handling of query strings
