Added note to changelog

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -16,6 +16,7 @@ holdings, and more.
 - Removed [Material UI](https://material-ui.com/) in favor of [Blueprint](https://blueprintjs.com/)
 - Make panels simpler and more information-dense
 - Add an oblique map view with 3D terrain
+- Store oblique camera positions in hash string
 - Numerous bug fixes for filtering map data
 
 ### Internal changes
