Get rid of connect in info drawer

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -18,6 +18,8 @@ holdings, and more.
 - Add an oblique map view with 3D terrain
 - Store oblique camera positions in hash string
 - Numerous bug fixes for filtering map data
+- In info panel, expand all sections by default, and improve scrolling through them
+  to offset
 
 ### Internal changes
 
