Updated changelog somewhat

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -2,10 +2,9 @@
 
 The 4.0 series represents the first major update to the Macrostrat web interface
 since 2018. It is the first major version of the Macrostrat user interface that
-is an incremental update, i.e., it is an evolution of the v3 codebase rather
-than a complete rewrite. The 4.0 milestone simplifies, modernizes, and
-modularizes the codebase to allow more collaborative development and a higher
-release cadence.
+is an evolution of the Macrostrat codebase rather than a complete rewrite.
+The 4.0 milestone simplifies, modernizes, and modularizes the codebase
+to allow more collaborative development and a simpler development process.
 
 Future iterations in the 4.0 series will add functionality such as
 stratigraphic columns, paleogeography, a digital globe, geochemical data
