Updated docs page a little bit

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -23,8 +23,22 @@ the bottom right corner to return to a north-up, overhead view.
 
 <DocsVideo slug="map-fossils-demo" />
 
+## Location-specific data
+
+Clicking the map will pull up data about each location.
+
 <DocsVideo slug="map-infobox-demo" />
 
+## Data layers
+
+In addition to our geologic map, view Macrostrat columns,
+[PBDB](https://paleobiodb.org) fossil collections, and satellite imagery.
+
 <DocsVideo slug="map-layers-demo" />
+
+## Primary literature
+
+The [xDD](https://www.xdd.org) machine-reading system provides links to
+papers relevant to each location.
 
 <DocsVideo slug="map-literature-demo" />
