Added a swatch for version info

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -1,4 +1,6 @@
-## `[4.0.0]`: Unreleased
+import { Version } from "./map-interface/components/docs";
+
+<Version spec="4.0.0" date="Unreleased" />
 
 The 4.0 series represents the first major update to the Macrostrat web interface
 since 2018. It is the first major version of the Macrostrat user interface that
@@ -9,6 +11,9 @@ to allow more collaborative development and a simpler development process.
 Future iterations in the 4.0 series will add functionality such as
 stratigraphic columns, paleogeography, a digital globe, geochemical data
 holdings, and more.
+
+This update was spearheaded by Macrostrat technical lead [Daven Quinn](https://davenquinn.com)
+and research software engineer [Casey Idzikowski](https://caseyidzikowski.com).
 
 ### User-facing changes
 
