--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -1,12 +1,16 @@
-import { DocsVideo } from "./components/docs";
+import { DocsVideo, NewSwatch } from "./components/docs";
 
-## Filtering
+## Using the Macrostrat map interface
+
+Macrostrat's map interface is the primary tool to interact with our geologic map holdings.
+
+### Map filtering
 
 The map can be searched and filtered by a variety of geological criteria.
 
 <DocsVideo slug="map-filtering-demo" />
 
-## 3D mapping
+### 3D view <NewSwatch>New in version 4!</NewSwatch>
 
 When zoomed to a localized area, the map can be rotated to 3D by pressing the '3D'
 button that appears in the bottom right corner of the map. Drag while right-clicking
@@ -15,30 +19,31 @@ the bottom right corner to return to a north-up, overhead view.
 
 <DocsVideo slug="map-3d-demo" />
 
-## Elevation profile
+### Elevation profile
 
 <DocsVideo slug="map-elevation-profile-demo" />
 
-## Fossil collections
+### Fossil collections
 
 <DocsVideo slug="map-fossils-demo" />
 
-## Location-specific data
-
-Clicking the map will pull up data about each location.
+### Location information
 
 <DocsVideo slug="map-infobox-demo" />
 
-## Data layers
+Clicking the map will pull up data about each location.
 
-In addition to our geologic map, view Macrostrat columns,
-[PBDB](https://paleobiodb.org) fossil collections, and satellite imagery.
+### Map layers
 
 <DocsVideo slug="map-layers-demo" />
 
-## Primary literature
+Additional layers such as Macrostrat columns,
+[PBDB](https://paleobiodb.org) fossil collections, and satellite imagery
+can be overlaid on the geologic map.
 
-The [xDD](https://www.xdd.org) machine-reading system provides links to
-papers relevant to each location.
+### Primary literature
 
 <DocsVideo slug="map-literature-demo" />
+
+The [xDD](https://www.xdd.org) machine-reading system provides links to
+papers relevant to specific units and map areas.
