Reorder usage panel

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -19,19 +19,18 @@ the bottom right corner to return to a north-up, overhead view.
 
 <DocsVideo slug="map-3d-demo" />
 
-### Elevation profile
+### Primary literature
 
-<DocsVideo slug="map-elevation-profile-demo" />
+<DocsVideo slug="map-literature-demo" />
 
-### Fossil collections
-
-<DocsVideo slug="map-fossils-demo" />
+The [xDD](https://www.xdd.org) machine-reading system provides links to
+papers relevant to specific units and map areas.
 
 ### Location information
 
 <DocsVideo slug="map-infobox-demo" />
 
-Clicking the map will pull up data about each location.
+Clicking the map reports data about each location.
 
 ### Map layers
 
@@ -41,9 +40,10 @@ Additional layers such as Macrostrat columns,
 [PBDB](https://paleobiodb.org) fossil collections, and satellite imagery
 can be overlaid on the geologic map.
 
-### Primary literature
+### Elevation profile
 
-<DocsVideo slug="map-literature-demo" />
+<DocsVideo slug="map-elevation-profile-demo" />
 
-The [xDD](https://www.xdd.org) machine-reading system provides links to
-papers relevant to specific units and map areas.
+### Fossil collections
+
+<DocsVideo slug="map-fossils-demo" />
