Changed map usage instructions and basemaps

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -9,7 +9,7 @@ The 4.0 milestone simplifies, modernizes, and modularizes the codebase
 to allow more collaborative development and a simpler development process.
 
 Future iterations in the 4.0 series will add functionality such as
-stratigraphic columns, paleogeography, a digital globe, geochemical data
+stratigraphic columns, paleogeography, geochemical data
 holdings, and more.
 
 This update was spearheaded by Macrostrat technical lead [Daven Quinn](https://davenquinn.com)
@@ -17,9 +17,10 @@ and research software engineer [Casey Idzikowski](https://caseyidzikowski.com).
 
 ### User-facing changes
 
+- Add a globe-based map projection and an oblique map
+  view with 3D terrain (thanks [Mapbox](https://www.mapbox.com/)!)
 - Removed [Material UI](https://material-ui.com/) in favor of [Blueprint](https://blueprintjs.com/)
 - Make panels simpler and more information-dense
-- Add an oblique map view with 3D terrain
 - Store oblique camera positions in hash string
 - Numerous bug fixes for filtering map data
 - In info panel, expand all sections by default, and improve scrolling through them
