Added built-in fog effect

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -10,8 +10,7 @@ Macrostrat's map interface is the primary tool to interact with our geologic map
 <DocsVideo slug="map-globe-demo" />
 
 The map interface is now based on an orthographic (globe) projection at low zoom levels. This display
-is intuitive and accurate, but it cannot show the
-entire globe. To switch to the previous mercator projection,
+is intuitive and accurate, but it cannot show all continents at once. To switch back to a mercator projection,
 click the <Icon icon="map" size={16}></Icon> button in the bottom right
 of the map interface.
 
