Small update to usage information

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -56,8 +56,9 @@ can be overlaid on the geologic map.
 
 <DocsVideo slug="map-elevation-profile-demo" />
 
-Elevation profiles are a placeholder for in-progress 3D cross-section
-functionality.
+In <em>Elevation profile</em> mode, click two points on the map to create
+an elevation profile between them. This capability is a placeholder
+for in-development 3D cross-section functionality.
 
 ### Fossil collections
 
