Added more usage info

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -3,7 +3,8 @@ import { Icon } from "@blueprintjs/core";
 
 ## Using Macrostrat's map interface
 
-Macrostrat's map interface is the primary tool to interact with our geologic map holdings.
+Macrostrat's map interface is the primary tool to interact with
+our multiscale, harmonized geologic map.
 
 ### Globe projection <NewSwatch>New in version 4.0!</NewSwatch>
 
@@ -14,7 +15,7 @@ is intuitive and accurate, but it cannot show all continents at once. To switch 
 click the <Icon icon="map" size={16}></Icon> button in the bottom right
 of the map interface.
 
-### 3D view <NewSwatch>New in version 4.0!</NewSwatch>
+### 3D terrain <NewSwatch>New in version 4.0!</NewSwatch>
 
 <DocsVideo slug="map-3d-demo" />
 
