--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -4,7 +4,7 @@ import { Icon } from "@blueprintjs/core";
 ## Using Macrostrat's map interface
 
 Macrostrat's map interface is the primary tool to interact with
-our multiscale, harmonized geologic map.
+our harmonized multiscale geologic map.
 
 ### Globe projection <NewSwatch>New in version 4.0!</NewSwatch>
 
