--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -1,18 +1,18 @@
 import { Version } from "./map-interface/components/docs";
 
-<Version spec="4.0.0" date="Unreleased" />
+<Version spec="4.0.0" date="July 5, 2022" />
 
 The 4.0 series represents the first major update to the Macrostrat web interface
-since 2018. It is the first major version of the Macrostrat user interface that
-is an evolution of the Macrostrat codebase rather than a complete rewrite.
-The 4.0 milestone simplifies, modernizes, and modularizes the codebase
-to allow more collaborative development and a simpler development process.
+since 2018. It is the first major version of Macrostrat's web visualization components
+that is an evolution of the codebase rather than a complete rewrite.
+The 4.0 milestone simplifies, modernizes, and modularizes this application
+to allow a more collaborative development process.
 
 Future iterations in the 4.0 series will add functionality such as
 stratigraphic columns, paleogeography, geochemical data
 holdings, and more.
 
-This update was spearheaded by Macrostrat technical lead [Daven Quinn](https://davenquinn.com)
+This update was produced by Macrostrat technical lead [Daven Quinn](https://davenquinn.com)
 and research software engineer [Casey Idzikowski](https://caseyidzikowski.com).
 
 ### User-facing changes
