--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -1,12 +1,31 @@
 import { Version } from "./map-interface/components/docs";
 
+<Version spec="4.1.0" date="February 1, 2022" />
+
+Recover filter states from URL parameters.
+
+Load the map info box from URL parameters.
+
+### Map settings
+
+Added a new settings panel to control map display options.
+
+- Show and hide map labels.
+- Dark mode
+
+Fix map settings button
+
+Yarn v2 compilation
+
+Added experimental line symbols
+
 <Version spec="4.0.0" date="July 6, 2022" />
 
 The 4.0 series represents the first major update to the Macrostrat web interface
-since 2018. It is the first major version of Macrostrat's web visualization components
-that is an evolution of the codebase rather than a complete rewrite.
-The 4.0 milestone simplifies, modernizes, and modularizes this application
-to allow a more collaborative development process.
+since 2018. It is the first major version of Macrostrat's web visualization
+components that is an evolution of the codebase rather than a complete rewrite.
+The 4.0 milestone simplifies, modernizes, and modularizes this application to
+allow a more collaborative development process.
 
 Future iterations in the 4.0 series will add functionality such as
 stratigraphic columns, paleogeography, geochemical data
