--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -6,7 +6,23 @@ import { Icon } from "@blueprintjs/core";
 Macrostrat's map interface is the primary tool to interact with
 our harmonized multiscale geologic map.
 
-### Globe projection <NewSwatch>New in version 4.0!</NewSwatch>
+### Save your place <NewSwatch version="4.1.0">New in version 4.1!</NewSwatch>
+
+<DocsVideo slug="version-4.1.0/save-location" />
+
+The map's view orientation, focused position, and filters can be saved for later
+and loaded on demand. This allows easy sharing of specific geologic features with
+others. The _Copy link_ button at the top of the info panel allows easy access to
+this feature.
+
+### Dark mode <NewSwatch version="4.1.0">New in version 4.1!</NewSwatch>
+
+<DocsVideo slug="version-4.1.0/dark-mode" />
+
+The map now has a _Dark mode_ with a matching map style. By default, this follows your system's
+"preferred color scheme", but it can be toggled on and off from the _Settings_ panel.
+
+### Globe projection <NewSwatch version="4.0.0">New in version 4.0!</NewSwatch>
 
 <DocsVideo slug="map-globe-demo" />
 
@@ -15,7 +31,7 @@ is intuitive and accurate, but it cannot show all continents at once. To switch 
 click the <Icon icon="map" size={16}></Icon> button in the bottom right
 of the map interface.
 
-### 3D terrain <NewSwatch>New in version 4.0!</NewSwatch>
+### 3D terrain <NewSwatch version="4.0.0">New in version 4.0!</NewSwatch>
 
 <DocsVideo slug="map-3d-demo" />
 
