Slightly updated usage

--- a/src/map-interface/usage.mdx
+++ b/src/map-interface/usage.mdx
@@ -19,8 +19,9 @@ this feature.
 
 <DocsVideo slug="version-4.1.0/dark-mode" />
 
-The map now has a _Dark mode_ with a matching map style. By default, this follows your system's
-"preferred color scheme", but it can be toggled on and off from the _Settings_ panel.
+The map now has a _Dark mode_ with a matching map style. This is enabled by default
+if your system's "preferred color scheme" is set to dark, but it can be toggled
+on and off from the _Settings_ panel.
 
 ### Globe projection <NewSwatch version="4.0.0">New in version 4.0!</NewSwatch>
 
