Updated panel styles

--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -13,18 +13,18 @@ import {
   The new <em>Settings</em> panel
 </DocsMedia>
 
-- Added a new _Settings_ panel to control map display options. This panel contains an
-  _Experiments_ panel to toggle previews of new features that are still in development.
+- Added a new _Settings_ panel to control map display options. The
+  _Experiments_ sub-panel allows previews of new features that are still in development.
 - Added a **Dark mode** for the entire user interface, including a new map style. This follows
   the browser-level preference by default, but it can be overridden from the _Settings_ panel.
 
-<DocsMedia href="version-4.1.0/dark-mode.mp4" float={null} width="50%">
+<DocsMedia href="version-4.1.0/dark-mode.mp4" align="center" width="50%">
   Toggling "Dark mode"
 </DocsMedia>
 
 #### Map features and bug fixes
 
-<DocsMedia href="version-4.1.0/basemap-labels.mp4" float={null} width="70%">
+<DocsMedia href="version-4.1.0/basemap-labels.mp4" align="center" width="70%">
   Toggling basemap labels
 </DocsMedia>
 
@@ -37,7 +37,7 @@ import {
 
 <DocsMedia
   href="version-4.1.0/cordillera-without-labels.png"
-  float={null}
+  align="center"
   width="50%"
 >
   The Rocky Mountains without map labels
@@ -56,8 +56,9 @@ import {
 
 #### Line symbols (_experimental_ 🧫)
 
-<DocsMedia href="version-4.1.0/experimental-line-symbols.mp4" float={null}>
-  Experimental line symbols
+<DocsMedia href="version-4.1.0/experimental-line-symbols.mp4" align="center">
+  Line symbols are critical to the representation of crustal processes on
+  geologic maps
 </DocsMedia>
 
 In the _Experiments_ panel, we have added a toggle for _Line symbols_, which
@@ -78,7 +79,7 @@ map-by-map basis.
 - Correctly save filter states from URL parameters.
 - Major simplification of the internal design of the map filter system.
 
-<DocsMedia href="version-4.1.0/save-location.mp4" float={null} width="50%">
+<DocsMedia href="version-4.1.0/save-location.mp4" align="center" width="50%">
   Saving location state
 </DocsMedia>
 
