--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -5,6 +5,10 @@ import {
   DocsMedia,
 } from "./map-interface/components/docs";
 
+<Version spec="4.1.3" date="February 4, 2023" major={false} />
+
+Fix poor sequencing of API calls to improve info panel loading times
+
 <Version spec="4.1.2" date="February 3, 2023" major={false} />
 
 - Address bug where the wrong map information was shown ([#75](https://github.com/UW-Macrostrat/web/issues/75))
