--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -5,6 +5,15 @@ import {
   DocsMedia,
 } from "./map-interface/components/docs";
 
+<Version spec="4.2.0" date="August 25, 2023" dev />
+
+- Switched Webpack compilation to Vite
+- Experimental Paleogeographic map interface
+- Experimental ability to focus on a map source
+- Info panel fixes
+- Shift+Click to construct cross sections
+- Allow cross-sections to be linked to externally (example: [Kaibab Arch](https://dev.macrostrat.org/map/cross-section/-112.3775,36.6438/-111.6447,35.8481#x=-112.3983&y=36.6538&z=7.4))
+
 <Version spec="4.1.3" date="February 4, 2023" major={false} />
 
 Fix poor sequencing of API calls to improve info panel loading times
