--- a/src/changelog.mdx
+++ b/src/changelog.mdx
@@ -102,7 +102,7 @@ map-by-map basis.
 
 - The focused location and info box can be loaded from URL parameters, allowing map locations to be easily shared.
   Optional hash parameters set view orientation, layer, and map filter state. The URL signature is
-  `https://macrostrat.org/loc/<lon>/<lat>#<hash>`.
+  `https://macrostrat.org/map/loc/<lon>/<lat>#<hash>`.
 - Correctly save filter states from URL parameters.
 - Major simplification of the internal design of the map filter system.
 
@@ -112,11 +112,11 @@ map-by-map basis.
 
 #### Examples of saved state
 
-- <InternalLink to="loc/-107.7083/38.5802#x=-107.8909&y=38.7058&z=8.73km&a=132&e=76&show=satellite,geology">
+- <InternalLink to="/map/loc/-107.7083/38.5802#x=-107.8909&y=38.7058&z=8.73km&a=132&e=76&show=satellite,geology">
     <em>Black Canyon of the Gunnison</em>, oblique satellite view
   </InternalLink>
   .
-- <InternalLink to="loc/-112.1976/36.0962#strat_name_concepts=11016&x=-112.236&y=36.2119&z=15.61km&a=165&e=42">
+- <InternalLink to="/map/loc/-112.1976/36.0962#strat_name_concepts=11016&x=-112.236&y=36.2119&z=15.61km&a=165&e=42">
     <em>Vishnu Schist in the Grand Canyon</em>, oblique view
   </InternalLink>
   .
