Moved changelog into map interface package

--- a/src/pages/map/map-interface/changelog.mdx
+++ b/src/pages/map/map-interface/changelog.mdx
@@ -3,7 +3,7 @@ import {
   InternalLink,
   DocsVideo,
   DocsMedia,
-} from "./map-interface/components/docs";
+} from "./components/docs";
 
 <Version spec="4.2.0" date="August 25, 2023" dev />
 
