Format codebase with prettier

--- a/src/pages/map/map-interface/changelog.mdx
+++ b/src/pages/map/map-interface/changelog.mdx
@@ -1,9 +1,4 @@
-import {
-  Version,
-  InternalLink,
-  DocsVideo,
-  DocsMedia,
-} from "./components/docs";
+import { Version, InternalLink, DocsVideo, DocsMedia } from "./components/docs";
 
 <Version spec="4.2.0" date="August 25, 2023" dev />
 
