--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -1,16 +1,30 @@
 export { ContentPage as default } from "~/layouts";
 import { Link } from "~/renderer/Link";
 import { LinkCard } from "~/components/cards";
+import { PageTitle } from "~/components/page-title";
 
-# Macrostrat <span class="subtitle"><span class="secondary">v2</span> <span class="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span></span>
+<PageTitle title="Macrostrat">
+  <span class="subtitle">
+    <span class="secondary">v2</span>{" "}
+    <span class="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span>
+  </span>
+</PageTitle>
 
 <LinkCard href="/map" title="Map interface">
   Macrostrat's main map interface
 </LinkCard>
 
-- <Link href="/maps">Maps index</Link>
-- <Link href="/columns">Stratigraphic columns</Link>
-- <Link href="/dev">Developer layers</Link>
+<LinkCard href="/maps" title="Maps index">
+  A list of all available maps
+</LinkCard>
+
+<LinkCard href="/columns" title="Stratigraphic columns">
+  A list of all available stratigraphic columns
+</LinkCard>
+
+<LinkCard href="/dev" title="Developer apps">
+  Layers and testbed apps that aren't ready for prime time
+</LinkCard>
 
 ## Legacy apps
 
