--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -1,6 +1,7 @@
 export { ContentPage as default } from "~/layouts";
+import { PageHeader } from "~/components";
 
-# Macrostrat development pages
+<PageHeader title="Development pages"></PageHeader>
 
 - [Globe](/dev/globe)
 - [Paleogeography](/dev/paleo)
