Updated page links a bit

--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -11,20 +11,27 @@ import { PageHeader } from "~/components";
 </PageHeader>
 
 <LinkCard href="/map" title="Map interface">
-  Macrostrat's main map interface
+  Macrostrat's main map interface showing a harmonized view of the Earth's crust
 </LinkCard>
 
-<LinkCard href="/maps" title="Maps index">
-  A list of all available maps
+## Data products
+
+Macrostrat integrates a variety of geological data products into a community-accessibe, space-time model of the Earth's crust.
+These products come from a variety of sources throughout the geosciences.
+
+<LinkCard href="/maps" title="Maps">
+  The spatial footprint of rocks on the Earth's surface
 </LinkCard>
 
-<LinkCard href="/columns" title="Stratigraphic columns">
-  A list of all available stratigraphic columns
+<LinkCard href="/columns" title="Columns">
+  Stratigraphic and geological columns showing the organization of rocks in time
 </LinkCard>
 
 <LinkCard href="/lex" title="Geologic lexicon">
   Geologic units and data dictionaries
 </LinkCard>
+
+### Development pages
 
 <LinkCard href="/dev" title="Developer apps">
   Layers and testbed apps that aren't ready for prime time
