Some basic fixes to Macrostrat logo

--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -3,9 +3,9 @@ import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 
 <PageHeader title="Macrostrat">
-  <span class="subtitle">
-    <span class="secondary">v2</span>{" "}
-    <span class="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span>
+  <span className="subtitle">
+    <span className="secondary">v2</span>{" "}
+    <span className="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span>
   </span>
 </PageHeader>
 
