Added project views

--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -30,6 +30,10 @@ These products come from a variety of sources throughout the geosciences.
   Geologic units and data dictionaries
 </LinkCard>
 
+<LinkCard href="/projects" title="Projects">
+  Projects for specific regions or geological problems
+</LinkCard>
+
 ### Development pages
 
 <LinkCard href="/dev" title="Developer apps">
