--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -39,3 +39,7 @@ These products come from a variety of sources throughout the geosciences.
 <LinkCard href="/dev" title="Developer apps">
   Layers and testbed apps that aren't ready for prime time
 </LinkCard>
+
+<LinkCard href="/docs/" title="Documentation">
+  Macrostrat documentation
+</LinkCard>
