--- a/src/pages/docs/ingestion/+Page.mdx
+++ b/src/pages/docs/ingestion/+Page.mdx
@@ -1,3 +1,6 @@
+export { ContentPage as default } from "~/layouts";
+
+
 # Map Editing Interface
 
 Created as part of Macrostrat's mapping pipeline for the CriticalMAAS project to facilitate the consumption and validation of TA1 maps.
