Add docs routes

--- a/src/pages/docs/+Page.mdx
+++ b/src/pages/docs/+Page.mdx
@@ -14,3 +14,13 @@ import { LinkCard } from "~/components/cards";
 <LinkCard href="/docs/ingestion" title="Ingestion">
   Documentation for ingesting data into Macrostrat
 </LinkCard>
+
+## API Documentation
+
+<LinkCard href="/api/v2/" title="General API Docs">
+  Documentation for Macrostrat's general purpose API
+</LinkCard>
+
+<LinkCard href="/api/ingest/docs" title="Ingestion API Docs">
+  Documentation for Macrostrat's ingestion API
+</LinkCard>
