--- a/src/pages/docs/ingestion/harmonization/+Page.mdx
+++ b/src/pages/docs/ingestion/harmonization/+Page.mdx
@@ -1,4 +1,4 @@
-export { ContentPage as default } from "~/layouts";
+export { DocumentationPage as default } from "~/layouts";
 import { LinkCard } from "~/components/cards";
 import { PageHeader } from "~/components";
 
