--- a/src/pages/docs/ingestion/+Page.mdx
+++ b/src/pages/docs/ingestion/+Page.mdx
@@ -14,25 +14,41 @@ on the registered maps attributes candidate maps that add value to the coalesced
 
 <img style={{maxWidth: "100%"}} src={imgUrl} />
 
-## Registering a Map for Ingestion
+## Staging
 
-Registration involves uploading all relevant files to a S3 bucket and
-then registering these files via API/Command line. After registering a map to the interface you can track its progress
-across the ingestion process.
+### Registering a Map for Ingestion
+
+Registration involves uploading all relevant files to an S3 bucket and
+recording them in Macrostrat's database via the API. Once a map has been
+registered, its progress through the ingestion process can be tracked.
+
+### Preprocessing
+
+After a map has been registered, the internal map processing pipeline can
+prepare the map for harmonization. This step involves determining the format
+of the map's data (e.g., Shapefiles, Geopackage, or TA1 output); parsing it
+into its component parts; and pulling out the points, lines, and polygons.
 
 ### In Progress
 
-We are currently working to make the registration of a map more available via the web interface. In progress are the
+We are currently working on adding subcommands to the `macrostrat`
+command-line interface for taking a collection of files for a map and
+processing them through the staging process outlines above. Briefly:
+
+1. Install the `macrostrat` command by following the instructions in the
+   [UW-Macrostrat/macrostrat](https://github.com/UW-Macrostrat/macrostrat)
+   GitHub repository.
+
+2. Run `macrostrat maps run-pipeline --help` for an overview of how to
+   stage a map.
+
+We are alo currently working to make the registration of a map more available via the web interface. In progress are the
 creation of API routes that will allow a user to provide the map files directly via the ingestion interface and have the
 automated pipelines that are currently in place translate this map into a new candidate in the Macrostrat system.
 
-## Preprocessing
+## Integration
 
-After a map has been registered it is made known to the internal map pipeline so that it can be prepared for the
-harmonization step. This step involves reading the data in the provided format ( Shapefiles, Geopackage, or TA1 output )
-and parsing it into its component parts pulling out the points, lines, and polygons.
-
-## Harmonization
+### Harmonization
 
 This process is what allows Macrostrat to present heterogenous maps in a homogenized map interface. Using the data that
 is processed into our points, lines and polygon tables in the previous step we can begin to assign them with our curated
@@ -41,7 +57,7 @@ tiles and associated metadata APIs. This allows you to continuously improve this
 
 [How to use this interface](/docs/ingestion/harmonization)
 
-## Prioritization
+### Prioritization
 
 After the harmonization process is deemed complete a expert will review the resulting map. Checking for novelty in the existing
 system and quality of ingestion they will decide whether to integrate this map into Macrostrat's Carto dataset that powers
